# zbuilder

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  Earthfile  Makefile  Pipfile  README.md  pre-commit.hook  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: basic.yml  bumpversion.yml  docker.yml  master.yml  pr.yml  publish-docker.yml  push.yml  pythonapp.yml
docs/: Azure.md  DO.md  GCP.md  Vagrant.md  aws.rst  azure.rst  bind.rst  conf.py  do.rst  ganeti.rst  gcp.rst  index.rst  install.rst  phpipam.rst  powerdns.rst  proxmox.rst  vagrant.rst
scripts/: pre-commit.hook  release.sh
tests/: test_cli.py
zbuilder/: __init__.py  cfg.py  cli.py  config.py  helpers.py  options.py  wrappers.py
zbuilder/assets/azure/init/group_vars/: all  centos  ubuntu
zbuilder/assets/do/init/: bootstrap.yml  hosts
zbuilder/assets/do/init/group_vars/: all  centos  ubuntu
zbuilder/assets/gcp/init/: hosts
zbuilder/assets/gcp/init/group_vars/: all  centos  ubuntu
zbuilder/assets/init/: ansible.cfg  bootstrap.yml
zbuilder/assets/init/group_vars/: all  centos  ubuntu
zbuilder/assets/vagrant/: Vagrant.j2
zbuilder/assets/vagrant/init/: ansible.cfg  bootstrap.yml  hosts  provision.yml
zbuilder/assets/vagrant/init/group_vars/: all  centos  ubuntu
zbuilder/dns/: __init__.py  ansible.py  aws.py  azure.py  bind.py  do.py  gcp.py  powerdns.py  vagrant.py
zbuilder/ipam/: __init__.py  phpipam.py
zbuilder/providers/: __init__.py  azure.py  vagrant.py
zbuilder/vm/: __init__.py  aws.py  azure.py  do.py  esxi.py  ganeti.py  gcp.py  proxmox.py  vagrant.py  vsphere.py
