[tool.poetry]
name = "zbuilder"
version = "0.0.38"
description = "Create VMs"
authors = ["Chasiotis Nikos <hasiotis@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/hasiotis/zbuilder"
include = ["LICENSE"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
ansible = "^6.4.0"
click = "^8"
"ruamel.yaml" = "^0.17"
Jinja2 = "^3.0"
"delegator.py" = "^0.1.1"
colorama = "^0.4"
retrying = "^1.3"
requests = "^2"
tabulate = "^0.8"
arrow = "^1.1"
PyJWT = "^2.5.0"
dpath = "^2.0"
dnspython = "^2"
massedit = "^0.69"

boto3 = { version = "^1.17", optional = true }
google-api-python-client = { version = "^2.9", optional = true }
google-cloud-dns = { version = "^0.32", optional = true }
google-auth-oauthlib = { version = "^0.4", optional = true }
oauthlib = { version = "^3.2.1", optional = true }
azure-mgmt-resource = { version = "^18.0", optional = true }
azure-mgmt-network = { version = "^19.0", optional = true }
azure-mgmt-compute = { version = "^21.0", optional = true }
azure-mgmt-dns = { version = "^8.0", optional = true }
msrestazure = { version = "^0.6.4", optional = true }
python-digitalocean = { version = "^1.16", optional = true }
proxmoxer = { version = "^1.1", optional = true }
Sphinx = { version = "^4.2.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^6"
pytest-cov = "^2"
pylint = "^2"
flake8 = "^3"
pre-commit = "^2.13.0"
black = "^21.6b0"

[tool.poetry.extras]
docs = ["sphinx"]
azure = ["azure-mgmt-resource", "azure-mgmt-network", "azure-mgmt-compute", "azure-mgmt-dns", "msrestazure"]
gcp = ["google-api-python-client", "google-cloud-dns", "google-auth-oauthlib", "oauthlib"]
proxmox = ["proxmoxer"]
aws = ["boto3"]
do = ["python-digitalocean"]

[tool.poetry.scripts]
zbuilder = 'zbuilder.cli:cli'

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra -q --junit-xml=results.xml --cov=zbuilder --cov-fail-under=5 --color=yes"
junit_family = "xunit2"
filterwarnings = "ignore::DeprecationWarning"
testpaths = [ "tests" ]

[tool.flake8]
exclude = ".git,__pycache__,docs/,pipenv/vendor/"
ignore = "E121,E123,E126,E226,E24,E704,W605,E127,E128,E129,E222,E231,E402,E501"
