[tool.poetry]
name = "zbuilder"
version = "0.0.61"
description = "Create VMs"
authors = ["Chasiotis Nikos <hasiotis@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/hasiotis/zbuilder"
include = ["LICENSE"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
python = ">=3.10,<4"
click = "^8"
"ruamel.yaml" = "^0.17"
Jinja2 = "^3.0"
"delegator.py" = "^0.1.1"
colorama = "^0.4"
retrying = "^1.3"
requests = "^2"
tabulate = "^0.8"
arrow = "^1.1"
PyJWT = "^2.5.0"
dpath = "^2.0"
dnspython = "^2"
massedit = "^0.69"
boto3 = "^1.17"
google-api-python-client = "^2.9"
google-cloud-dns = "^0.32"
google-auth-oauthlib = "^0.4"
oauthlib = "^3.2.1"
azure-mgmt-resource = "^18.0"
azure-mgmt-network = "^19.0"
azure-mgmt-compute = "^21.0"
azure-mgmt-dns = "^8.0"
msrestazure = "^0.6.4"
python-digitalocean = "^1.16"
proxmoxer = "^1.1"
ansible = "^9.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7"
pylint = "^2"
pytest-cov = "^4.0.0"
flake8 = "^3"
pre-commit = "^2.13.0"
black = "^21.6b0"

[tool.poetry.scripts]
zbuilder = 'zbuilder.cli:cli'

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra -q --junit-xml=results.xml --cov=zbuilder --cov-fail-under=5 --color=yes"
junit_family = "xunit2"
filterwarnings = "ignore::DeprecationWarning"
testpaths = [ "tests" ]

[tool.flake8]
exclude = ".git,__pycache__,docs/,pipenv/vendor/"
ignore = "E121,E123,E126,E226,E24,E704,W605,E127,E128,E129,E222,E231,E402,E501"
